Fix uneven paragraph spacing

--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -1,5 +1,4 @@
 div#intro {
-
   > img {
 	float: left;
 	width: 25%;
@@ -26,10 +25,10 @@ div#intro {
 
 #biography {
   overflow: hidden;
-  margin-top: 20px;
+  margin-top: 0;
 
   > p {
-	margin-top: 0;
+	margin-bottom: 0;
   }
 }
 
